# Celsius

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  VERIFICATION_RESULTS.md  config.toml  validate_thesis.py
src/: config.rs  main.rs
src/ai/: claude.rs  mod.rs  prompts.rs
src/data/: cache.rs  gamma_api.rs  mod.rs  types.rs  weather.rs  websocket.rs
src/execution/: clob_client.rs  mod.rs  order_manager.rs  persistence.rs  risk.rs  simulator.rs  types.rs
src/monitoring/: alerts.rs  logger.rs  metrics.rs  mod.rs
src/strategies/: mod.rs  sum_to_one.rs  types.rs  weather_edge.rs
